About us page : white space below the footer - fixed

--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -4,6 +4,10 @@
     border-left: none !important;
 } */
 
+html {
+    height: auto !important;
+}
+
 #pills-tab .nav-link.text-white.active::after {
     content: "";
     position: absolute;
@@ -72,6 +76,12 @@
 
 .back-to-search-mobile-row .mobile-full-area .btn:hover {
     box-shadow: 0 2px 5px 0 rgb(0 0 0 / 16%), 0 2px 10px 0 rgb(0 0 0 / 12%);
+}
+
+section#about-us {
+    display: flex;
+    height: 55vh;
+    align-items: center;
 }
 
 @media screen and (max-width: 767px) {
